--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,21 @@ p {
     width: 100%;
   }
 }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .col-md-1,
+  .col-md-2,
+  .col-md-3,
+  .col-md-4,
+  .col-md-5,
+  .col-md-6,
+  .col-md-7,
+  .col-md-8,
+  .col-md-9,
+  .col-md-10,
+  .col-md-11,
+  .col-md-12 {
+    border: 10px solid #fff;
+  }
+  
+}
